--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<title>Styles Conference</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>Non-sense.</p>
+		<h1>Styles Conference</h1>
+		<p>very year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
 	</body>
 </html>
