--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
 		<link rel="stylesheet" href="assets/stylesheets/main.css">
 	</head>
 	<body>
-		<h1>Styles Conference</h1>
-		<p>very year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+		<header>
+			<h1>Styles Conference</h1>
+			<h3>August 24&ndash;26th &mdash; Chicage, IL</h3>
+		</header>
+		<section>
+			<h2>Dedicated to the Craft of Building Websites</h2>
+			<p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+		</section>
+		<section>
+			<section>
+				<h5>Speakers</h5>
+				<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories</p>
+			</section>
+			<section>
+				<h5>Schedule</h5>
+				<p>The schedule looks very interesting, it is jam-packed with fascinating talks</p>
+			</section>
+			<section>
+				<h5>Venue</h5>
+				<p>Venue</p>
+				<h6>Mumbai</h6>
+				<h6>Berlin</h6>
+				<h6>New York</h6>
+			</section>
+		</section>
+		<footer>
+			<small>&copy; Styles Conference></small>
+		</footer>
 	</body>
 </html>
