--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Styles Conference</title>
-		<link rel="stylesheets" href="assets/stylesheets/main.css">
+		<link rel="stylesheet" href="assets/stylesheets/main.css">
 	</head>
 	<body>
 		<header>
