--- a/index.html
+++ b/index.html
@@ -1,37 +1,17 @@
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Styles Conference</title>
-		<link rel="stylesheet" href="assets/stylesheets/main.css">
-	</head>
-	<body>
-		<header>
-			<h1>Styles Conference</h1>
-			<h3>August 24&ndash;26th &mdash; Chicage, IL</h3>
-		</header>
-		<section>
-			<h2>Dedicated to the Craft of Building Websites</h2>
-			<p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-		</section>
-		<section>
-			<section>
-				<h5>Speakers</h5>
-				<p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories</p>
-			</section>
-			<section>
-				<h5>Schedule</h5>
-				<p>The schedule looks very interesting, it is jam-packed with fascinating talks</p>
-			</section>
-			<section>
-				<h5>Venue</h5>
-				<p>Venue</p>
-				<h6>Mumbai</h6>
-				<h6>Berlin</h6>
-				<h6>New York</h6>
-			</section>
-		</section>
-		<footer>
-			<small>&copy; Styles Conference></small>
-		</footer>
-	</body>
-</html>
+<section class="panel color2">
+	<div class="intro">
+		<h2 class="major">Panel</h2>
+		<p>Just a generic panel.</p>
+	</div>
+	<div class="inner columns">
+		<div class="span-4">
+			<p>This column is 4 units wide.</p>
+		</div>
+	<div class="span-3">
+	<p>This column is 3 units wide.</p>
+	</div>
+	<div class="span-2">
+		<p>This column is 2 units wide.</p>
+	</div>
+	</div>
+</section>
