--- a/index.html
+++ b/index.html
@@ -15,3 +15,23 @@
 	</div>
 	</div>
 </section>
+
+<section class="panel banner medium right">
+	<div class="content color0">
+		<h1>Banner</h1>
+		<p>Lorem ipsum dolor sit amet.</p>
+	</div>
+	<div class="image" data-position="center">
+		<img src="/path/to/image.jpg" alt="" />
+	</div>
+</section>
+
+<section class="panel spotlight large right">
+	<div class="content">
+		<h1>Spotlight</h1>
+		<p>Lorem ipsum dolor sit amet.</p>
+	</div>
+	<div class="image" data-position="center">
+		<img src="/path/to/image.jpg" alt="" />
+	</div>
+</section>
