--- a/index.html
+++ b/index.html
@@ -43,26 +43,9 @@
 		</section>
 		<section class="Light box enable gallery">				   
 			<div class="gallery">
-				<a href="/gallery/thumbs/01.jpg" class="image filtered span-2" data-position="center">
-					<img src="/gallery/fulls/01.jpg" alt="" />
+				<a href="/pic01.jpg" class="image filtered span-2" data-position="center">
+					<img src="/pic01.jpg" alt="" />
 				</a>
-				<a href="/gallery/thumbs/02.jpg" class="image filtered span-4" data-position="center">
-					<img src="/gallery/fulls/02.jpg" alt="" />
-				</a>
-				<div class="group span-4">
-					<a href="/gallery/thumbs/03.jpg" class="image filtered span-2" data-position="center">
-						<img src="/gallery/fulls/03.jpg" alt="" />
-					</a>
-					<a href="/gallery/thumbs/04.jpg" class="image filtered span-2" data-position="center">
-						<img src="/gallery/fulls/04.jpg" alt="" />
-					</a>
-					<a href="/gallery/thumbs/05.jpg" class="image filtered span-2" data-position="center">
-						<img src="/gallery/fulls/05.jpg" alt="" />
-					</a>
-					<a href="/gallery/thumbs/06.jpg" class="image filtered span-2" data-position="center">
-						<img src="/gallery/fulls/06.jpg" alt="" />
-					</a>
-				</div>
 			</div>
 		</section>										      
 	</body>
