--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <p>My first paragraph </p>
     <p>My second paragraph </p>
     <a href="https://www.w3schools.com">This is a link</a>
-    <img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
     <button>Click me</button>
+    <img src="241017-100ib-1048-print.jpg">
     <ul>
       <li>Coffee</li>
       <li>Tea</li>
