--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     </div>
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
+      <p>Berlin, Germyn</p>
+      <p>+49 1520 519 5483</p>
+      <p>abhishekgawde90@gmail.com</p>
     </div>
   </div>
   <div class="w3-half w3-teal w3-container" style="height:700px">
