--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
     <div class="w3-padding-64">
       <p>..for a cup of coffee, or whatever.</p>
-      <p>Berlin, Germyn</p>
+      <p>Berlin, Germany</p>
       <p>+49 1520 519 5483</p>
       <p>abhishekgawde90@gmail.com</p>
     </div>
