--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jackson Template</title>
+	<title>Abhishek Gawde - Data Science Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -89,7 +89,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
+			<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
