--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 
 		<div id="colorlib-main">
 			<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
-				<div class="flexslider js-fullheight">
+				<div class="flexslider js-fullheight" style="height: 918px;">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
 				   		<div class="overlay"></div>
