--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
+			<!--<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
 				<div class="flexslider js-fullheight" style="height: 918px;">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
@@ -99,7 +99,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Hi! <br>I'm Jackson</h1>
+						   					<h1>Hi! <br>I'm Abhishek</h1>
 						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
 												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
@@ -126,7 +126,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 				   	</li>
 				  	</ul>
 			  	</div>
-			</section>
+			</section>-->
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
