--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Jackson Ford</a></h1>
-				<span class="position"><a href="#">UI/UX/Designer</a> in Philippines</span>
+				<h1 id="colorlib-logo"><a href="index.html">Abhishek Gawde</a></h1>
+				<span class="position"><a href="#">Analyst</a> in Berlin</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -137,7 +137,13 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+										<p><strong>Graduate from the Technical University of Berlin with an extensive experience in developing and maintaining spreadsheet based data modeling, automation and simulation tools to gain project insights and assist decision making. Proven track record of generating relevant perspectives and trade-offs derived from data, consequently influencing the processes and strategies. Possesses an inherent drive to solve problems with creative thinking and collaborating with cross-functional teams.
+											Expertise:
+												• Technical, statistical and economic analysis
+												• Data Analysis, Reporting and Visualization in Python and Excel
+												• Spreadsheet modeling, optimization and simulation tools
+											Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel
+											Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
 										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 									</div>
 								</div>
