--- a/index.html
+++ b/index.html
@@ -137,14 +137,13 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Graduate from the Technical University of Berlin with an extensive experience in developing and maintaining spreadsheet based data modeling, automation and simulation tools to gain project insights and assist decision making. Proven track record of generating relevant perspectives and trade-offs derived from data, consequently influencing the processes and strategies. Possesses an inherent drive to solve problems with creative thinking and collaborating with cross-functional teams.
-											Expertise:
+											<p><strong>Graduate from the Technical University of Berlin with an extensive experience in developing and maintaining spreadsheet based data modeling, automation and simulation tools to gain project insights and assist decision making. Proven track record of generating relevant perspectives and trade-offs derived from data, consequently influencing the processes and strategies. Possesses an inherent drive to solve problems with creative thinking and collaborating with cross-functional teams.</p>
+											<p>Expertise:
 												• Technical, statistical and economic analysis
 												• Data Analysis, Reporting and Visualization in Python and Excel
-												• Spreadsheet modeling, optimization and simulation tools
-											Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel
-											Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+												• Spreadsheet modeling, optimization and simulation tools</p>
+											<p>Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel</p>
+											</p>Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
 									</div>
 								</div>
 							</div>
