--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="#">abhishekgawde90@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -729,7 +729,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<p>Berlin, Germany</p>
 								</div>
 							</div>
 
