--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 		</aside>
 
 		<div id="colorlib-main">
-			<!--<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
+			<section id="colorlib-hero" class="js-fullheight" data-section="home" style="height: 918px;">
 				<div class="flexslider js-fullheight" style="height: 918px;">
 					<ul class="slides">
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
@@ -126,7 +126,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 				   	</li>
 				  	</ul>
 			  	</div>
-			</section>-->
+			</section>
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
