--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master Degree Graphic Design
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Master Degree - TU Berlin
 									            </a>
 									        </h4>
 									    </div>
@@ -396,7 +396,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree - Mumbai University
 									            </a>
 									        </h4>
 									    </div>
@@ -413,7 +413,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Diploma in Information Technology
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Massive Open Online Courses 
 									            </a>
 									        </h4>
 									    </div>
@@ -424,7 +424,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									    </div>
 									</div>
 
-									<div class="panel panel-default">
+									<!--<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Diploma in Information Technology
@@ -450,7 +450,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
 									        </div>
 									    </div>
-									</div>
+									</div>-->
 								</div>
 							</div>
 						</div>
