--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
+					                  <h2><a href="#">Project and Data Analyst</a> <span>Jul2018-current</span></h2>
 					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
 					               </div>
 					            </div>
@@ -490,7 +490,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Front End Developer at Google Company</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Project and Data Analyst - Work Student</a> <span>Aug2017-Jun2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -502,7 +502,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Project Engineer - Intern</a> <span>May2017-Jul2017</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -514,7 +514,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Business Development and Sales - Intern</a> <span>Sep2016-Oct2018</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
@@ -526,7 +526,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
+					               	<h2><a href="#">Senior Instrumentation Engineer</a> <span>Aug2012-Sep2015</span></h2>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
