--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				<div id="navbar" class="collapse">
 					<ul>
 						<!--<li class="active"><a href="#" data-nav-section="home">Home</a></li>-->
-						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Services</a></li>
+						<li><a href="#" data-nav-section="about">Who am I</a></li>
+						<li><a href="#" data-nav-section="services">What I do</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -135,7 +135,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Us</span>
+										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 											<p><strong>Graduate from the Technical University of Berlin with an extensive experience in developing and maintaining spreadsheet based data modeling, automation and simulation tools to gain project insights and assist decision making. Proven track record of generating relevant perspectives and trade-offs derived from data, consequently influencing the processes and strategies. Possesses an inherent drive to solve problems with creative thinking and collaborating with cross-functional teams.</p>
 											<p>Expertise:
