--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<span class="heading-meta">Expertise</span>
+							<h2 class="colorlib-heading">What I do?</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
