--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 											<p><strong>Graduate from the Technical University of Berlin with an extensive experience in developing and maintaining spreadsheet based data modeling, automation and simulation tools to gain project insights and assist decision making. Proven track record of generating relevant perspectives and trade-offs derived from data, consequently influencing the processes and strategies. Possesses an inherent drive to solve problems with creative thinking and collaborating with cross-functional teams.</p>
-										<ul><strong>Expertise:</strong>
+										<ul><h3>Expertise:</h3>
 												<li>Technical, statistical and economic analysis</li>
 												<li>Data Analysis, Reporting and Visualization in Python and Excel</li>
 												<li>Spreadsheet modeling, optimization and simulation tools</li></ul>
 											<p>Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel</p>
-											</p>Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
+											<p>Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
 									</div>
 								</div>
 							</div>
