--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 											<li>Data Analysis, Reporting and Visualization in Python and Excel</li>
 											<li>Spreadsheet modeling, optimization and simulation tools</li>
 										</ul>
-										<p>Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel
-										Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling.</p>
+										<p>Data Skills: Statistics | Python | SQL | VBA | Power Query | Power Pivot | Power BI | Excel</p>
+										<p>Strengths: Problem Solver | Analytical | Quick-learner | Story-Telling</p>
 									</div>
 								</div>
 							</div>
