--- a/project1.html
+++ b/project1.html
@@ -67,7 +67,7 @@
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
-						<li><a href="./project1.html">Work</a></li>
+						<li><a href="#" data-nav-section="work">Work</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -531,7 +531,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 01</a></h3>
+										<h3><a href="project1.html">Work 01</a></h3>
 										<span>Website</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
