--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="project1.html">Work 01</a></h3>
+										<h3><a href="abhi630/gist:4ed52249b2119466b400631a9ec5f4cc">Work 01</a></h3>
 										<span>Website</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
