--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019 All r
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	
-	
+	<script src="https://gist.github.com/abhi630/4ed52249b2119466b400631a9ec5f4cc.js"></script>
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
 
