--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
     <li><a href="#about">About</a></li>
     <li><a href="#apps">Apps</a></li>
     <li><a href="#blog">Writing</a></li>
-    <li><a href="mailto:abhishekgawde90@gmail.com">Contact</a></li>
+    <li><a href="/cdn-cgi/l/email-protection#4627242e2f352e232d21273122237f7606212b272f2a6825292b">Contact</a></li>
   </ul>
 </nav>
 
@@ -204,7 +204,7 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
         <div class="hero-eyebrow">Builder · Berlin</div>
         <h1 class="display hero-name">Abhishek<br><em>Gawde</em></h1>
         <p class="hero-bio">
-          I build <strong>apps that help and get out of the way</strong> — no subscriptions, no dark patterns, no engagement traps. By day, I lead AI adoption at IB Vogt. In the hours that are mine, I ship.
+          I build <strong>apps that help and get out of the way</strong> — no dark patterns, no engagement traps. By day, I lead AI adoption at IB Vogt. In the hours that are mine, I ship.
         </p>
         <div class="hero-cta">
           <a href="#apps" class="btn-primary">See the apps</a>
@@ -217,14 +217,7 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
           <div class="hero-stat-num">4</div>
           <div class="hero-stat-label">Apps live now</div>
         </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num serif" style="font-style:italic;font-size:22px;padding-top:6px">One-time</div>
-          <div class="hero-stat-label">Purchase — always</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" style="font-size:22px;padding-top:6px">Berlin</div>
-          <div class="hero-stat-label">Based in Germany</div>
-        </div>
+        
       </div>
     </div>
   </div>
@@ -239,9 +232,10 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
 
     <div class="about-grid">
       <div class="about-text">
-        <p>I graduated from <strong>TU Berlin</strong> and spent years working as a data and project analyst in the renewable energy sector. I understand how large organisations adopt technology — slowly, carefully, with a lot of internal friction. I help reduce that friction.</p>
-        <p>Alongside that, I build apps. Small, focused, honest ones. Products that <strong>solve one problem well</strong>, charge a fair price once, and leave users alone after that. No retention mechanics, no push notification guilt-trips, no freemium tricks.</p>
-        <p>I write about AI agents, automation, and what it actually takes to build and distribute software as a solo developer at <strong>build-automate-ai-repeat.com</strong>.</p>
+        
+        <p>I build apps. Small, focused, honest ones. Products that <strong>solve one problem well</strong>, charge a fair price once, and leave users alone after that. No retention mechanics, no push notification guilt-trips, no freemium tricks.</p>
+        <p>Alongside that, I work in data and AI — helping organisations figure out how to actually use it rather than just talk about it. Most adoption fails at the human layer, not the technical one.</p>
+        <p>I write about AI agents, automation, and what it takes to build and distribute software as a solo developer at <strong>build-automate-ai-repeat.com</strong>.</p>
         <div class="about-pills">
           <span class="pill">Data Analysis</span>
           <span class="pill">AI Automation</span>
@@ -256,14 +250,14 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
 
       <div class="about-right">
         <div class="about-card">
-          <div class="about-card-label">Current role</div>
+          <div class="about-card-label">Day job</div>
           <div class="about-card-val">Data &amp; AI Analyst</div>
-          <div class="about-card-sub">IB Vogt — Solar EPC · Berlin</div>
+          <div class="about-card-sub">Renewable energy · Berlin</div>
         </div>
         <div class="about-card">
-          <div class="about-card-label">Enterprise AI</div>
-          <div class="about-card-val">Digital Champions Lead</div>
-          <div class="about-card-sub">Internal AI adoption program</div>
+          <div class="about-card-label">AI Adoption</div>
+          <div class="about-card-val">Enterprise AI Programs</div>
+          <div class="about-card-sub">Getting teams to actually use AI</div>
         </div>
         <div class="about-card">
           <div class="about-card-label">Education</div>
@@ -288,7 +282,6 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
         <div class="section-eyebrow">What I build</div>
         <h2 class="display section-title">Four apps.<br>One philosophy.</h2>
       </div>
-      <div class="philosophy-tag">One-time purchase · No subscriptions</div>
     </div>
 
     <div class="apps-grid">
@@ -317,11 +310,11 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
         <span class="app-arrow"><i data-lucide="arrow-up-right" width="16" height="16"></i></span>
       </a>
 
-      <a href="#" target="_blank" rel="noopener" class="app-card homeos wide">
+      <a href="https://www.notion.so/marketplace/templates/5s-home-management" target="_blank" rel="noopener" class="app-card homeos wide">
         <div class="app-icon"><i data-lucide="layout-dashboard" width="22" height="22"></i></div>
         <div>
           <div class="app-name">5S Home OS</div>
-          <p class="app-desc">Household management system built in Notion. Bring the 5S methodology home — sort, set, shine, standardise, sustain. A template you own outright. No recurring fees.</p>
+          <p class="app-desc">Household management system built in Notion. Bring the 5S methodology home — sort, set, shine, standardise, sustain. A template you own outright.</p>
           <span class="app-tag">Notion Template · Productivity</span>
         </div>
         <span class="app-arrow" style="position:static;align-self:flex-start;flex-shrink:0">
@@ -385,16 +378,8 @@ footer{padding:48px 0;border-top:1px solid var(--border)}
         <li><a href="https://build-automate-ai-repeat.com" target="_blank">Blog</a></li>
         <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
         <li><a href="https://linkedin.com/in/abhishekgawde" target="_blank">LinkedIn</a></li>
-        <li><a href="mailto:abhishekgawde90@gmail.com">Email</a></li>
+        <li><a href="/cdn-cgi/l/email-protection#83e2e1ebeaf0ebe6e8e4e2f4e7e6bab3c3e4eee2eaefade0ecee">Email</a></li>
       </ul>
       <div class="footer-copy">
         Built by hand, not template.<br>
-        <span style="color:var(--accent)">No subscriptions. Ever.</span>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<script>lucide.createIcons();</script>
-</body>
-</html>
+        <span style="color:var(--accent)">Berlin, 2025</span>
